added     android.packagingOptions {         exclude 'META-INF/DEPENDENCIES'         exclude 'META-INF/LICENSE'         exclude 'META-INF/LICENSE.txt'         exclude 'META-INF/NOTICE'         exclude 'META-INF/NOTICE.txt'     }

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,14 @@ dependencies {
     }
 }
 
+android.packagingOptions {
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/NOTICE.txt'
+}
+
 // Robolectric config
 robolectric {
     // Configure includes / excludes
