--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,14 @@ buildscript {
     }
 }
 
+android.packagingOptions {
+    exclude 'META-INF/DEPENDENCIES'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/NOTICE.txt'
+}
+
 allprojects {
     repositories {
         jcenter()
